change all site

--- a/src/partials/head.html
+++ b/src/partials/head.html
@@ -6,9 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Криптософт</title>
 
-  <link rel="preload" href="./fonts/neosanscyr-regular.woff2" as="font">
-  <link rel="preload" href="./fonts/dincondensed.woff2" as="font">
-  <link rel="preload" href="./fonts/neosanscyr_medium.woff2" as="font">
+  <link rel="preload" href="/fonts/SofiaSans-Regular.woff2" as="font">
+  <link rel="preload" href="/fonts/SofiaSans-Light.woff2" as="font">
+  <link rel="preload" href="/fonts/SofiaSansCondensed-Bold.woff2" as="font">
+  <link rel="preload" href="/fonts/SofiaSansCondensed-SemiBold.woff2" as="font">
   <link rel="stylesheet" href="./bootstrap/bootstrap.min.css">
   <link rel="stylesheet" href="./swiper/swiper-bundle.min.css">
   <link rel="stylesheet" href="./accordion/accordion.min.css">
