--- a/src/partials/main/about.html
+++ b/src/partials/main/about.html
@@ -1,24 +1,11 @@
 <section class="main-about">
   <div class="custom-container container-fluid">
-    <div class="main-about__content">
-      <h2 class="main-about__title text-h2 text-uppercase">
-        Научно-техническое предприятие "Криптософт"
-      </h2>
-      <div class="main-about__block d-flex justify-content-between">
-        <div class="main-about__description d-flex flex-column">
-          <div class="main-about__descr d-flex flex-column">
-            <p class="main-about__text descr1">
-              НТП "Криптософт" является ведущим предприятием в России в области информационной безопасности, специализирующимся на разработке аппаратных и программных средств защиты информации.  С момента своего основания в 1993 году компания демонстрирует стабильный рост всех показателей и активно накапливает научный потенциал
-            </p>
-            <p class="main-about__text descr1">
-              Основные направления деятельности включают проведение научно-исследовательских и опытно-конструкторских работ, изготовление, а также единичные и серийные поставки изделий специального назначения            </p>
-            <p class="main-about__text descr1">
-              НТП "Криптософт" активно занимается разработкой систем контроля доступа информации (СКЗИ) новейших поколений и соответствует строгим требованиям лицензирования ФСБ РФ, ФСТЭК РФ и других регулирующих органов            </p>
-          </div>
-          <div class="main-about__icons d-flex flex-wrap justify-content-between align-items-center">
-            <div class="main-about__icon d-flex align-items-center">
+    <div class="main-about__content d-flex flex-lg-row flex-column-reverse">
+      <div class="main-about__left d-flex flex-lg-row flex-column">
+        <div class="main-about__icons d-flex flex-wrap flex-lg-column justify-content-lg-between">
+          <div class="main-about__icon d-flex align-items-center">
               <span class="main-about__icon-svg">
-                <svg width="80" height="80" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg width="50" height="50" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <g clip-path="url(#clip0_944_897)">
                   <path d="M5.59099 11.5625C4.55974 11.875 3.60662 12.8437 3.30974 13.9218C3.21599 14.25 3.15349 22.9687 3.15349 37.2968V60.1562H1.27849C-0.94026 60.1562 -0.94026 60.1562 -0.737135 61.7968C-0.44026 64.125 1.38787 66.6875 3.49724 67.7031C5.48162 68.6562 3.27849 68.6093 39.591 68.5625L72.7629 68.5156L73.6847 68.1562C76.4816 67.0937 78.5754 64.5468 78.9191 61.7968C79.1222 60.1562 79.1222 60.1562 76.9035 60.1562H75.0285L74.9972 36.9843C74.9504 15.7656 74.9347 13.7812 74.6847 13.3593C74.3566 12.75 73.6847 12.0781 73.0754 11.75C72.6379 11.5 69.9816 11.4843 39.3254 11.4531C21.0129 11.4375 5.84099 11.4843 5.59099 11.5625ZM72.6535 12.8125C73.1691 13.0468 73.3879 13.2656 73.6222 13.7812C73.9191 14.4375 73.9347 15.0156 73.9347 37.2968V60.1562H39.091H4.24724V37.3125C4.24724 14.6093 4.24724 14.4687 4.57537 13.8125C4.79412 13.3437 5.07537 13.0625 5.54412 12.8281L6.20037 12.5H39.091C71.3254 12.5 71.9972 12.5156 72.6535 12.8125ZM27.9504 62.0937C28.2629 63.1718 29.5285 64.4218 30.6535 64.75C31.9035 65.125 46.2785 65.125 47.5285 64.75C48.6535 64.4218 49.9191 63.1718 50.2316 62.0937L50.4504 61.3281L64.1691 61.2812L77.8879 61.25L77.7785 61.9687C77.5441 63.6875 75.9504 65.8593 74.2785 66.7031C72.6535 67.5312 74.2472 67.5 39.091 67.5C3.96599 67.5 5.52849 67.5312 3.91912 66.7031C3.12224 66.2968 2.01287 65.2812 1.40349 64.4218C0.90349 63.6875 0.34099 62.2031 0.34099 61.6093V61.25L14.0285 61.2812L27.7316 61.3281L27.9504 62.0937ZM49.2472 61.4843C49.2472 62.25 48.0754 63.4687 47.1066 63.7343C46.2941 63.9687 31.8879 63.9687 31.0754 63.7343C30.1066 63.4687 28.9347 62.25 28.9347 61.4843C28.9347 61.2812 30.0285 61.25 39.091 61.25C48.1535 61.25 49.2472 61.2812 49.2472 61.4843Z" fill="#009A6D"/>
                   <path d="M9.87225 16.3438C9.16912 16.6562 8.66912 17.125 8.29412 17.8438C7.99725 18.4219 7.99725 18.9688 8.0285 36.5469L8.07537 54.6562L8.55975 55.2656C8.80975 55.5938 9.341 56.0156 9.716 56.2031L10.4035 56.5625H39.0441C64.5441 56.5625 67.7629 56.5312 68.2785 56.3281C69.0129 56.0156 69.5129 55.5469 69.8879 54.8125C70.1691 54.25 70.1847 53.625 70.1847 36.3281C70.1847 19.0312 70.1691 18.4062 69.8879 17.8438C69.5129 17.1094 69.0129 16.6406 68.2785 16.3281C67.7629 16.125 64.5597 16.0938 39.0597 16.0938C13.8254 16.1094 10.3566 16.1406 9.87225 16.3438ZM68.1066 17.5C68.3879 17.6562 68.7316 17.9844 68.8879 18.2344C69.1535 18.6406 69.1691 19.5781 69.216 35.625C69.2472 44.9531 69.216 52.9531 69.1691 53.4219C69.091 54.0625 68.9504 54.375 68.5441 54.8281L68.0285 55.3906H39.091H10.1535L9.62225 54.8125L9.091 54.2188V36.3594C9.091 16.6094 9.01287 18.1406 10.091 17.4844C10.5597 17.2031 11.2941 17.1875 39.091 17.1875C67.0754 17.1875 67.6222 17.1875 68.1066 17.5Z" fill="#009A6D"/>
@@ -37,13 +24,13 @@
                   </defs>
                   </svg>
               </span>
-              <span class="main-about__icon-text text-uppercase text-h11">
-                Сертифицированная <br/>безопасность
+            <span class="main-about__icon-text text-uppercase text-h11">
+                Сертифицированная безопасность
               </span>
-            </div>
-            <div class="main-about__icon d-flex align-items-center">
+          </div>
+          <div class="main-about__icon d-flex align-items-center">
               <span class="main-about__icon-svg">
-                <svg width="80" height="82" viewBox="0 0 80 82" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg width="50" height="50" viewBox="0 0 80 82" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <g clip-path="url(#clip0_944_950)">
                   <path d="M5.03356 15.2841C3.6131 15.7671 2.2443 17.3722 1.96021 18.9205C1.8569 19.446 1.81816 25.8381 1.84399 40.412L1.88273 61.1506L2.2443 62.0029C2.70918 63.1108 3.58728 64.0767 4.58159 64.5881L5.3693 64.9858L15.2867 65.0284L25.1911 65.071V67.0171L25.1782 68.9631L23.4091 70.0995C22.4406 70.7245 21.5367 71.3495 21.4204 71.4773C21.2267 71.6904 21.188 72.0029 21.188 73.4801C21.188 74.8296 21.2397 75.2983 21.3946 75.5398L21.5883 75.8523H34.876H48.1637L48.3574 75.5398C48.5124 75.2983 48.564 74.8296 48.564 73.5654C48.564 72.6421 48.5253 71.7898 48.4866 71.662C48.4091 71.4489 45.9556 69.787 44.9096 69.233L44.4318 68.9773V67.0171V65.071L54.4137 65.0284L64.3827 64.9858L65.1188 64.6023C66.1518 64.0767 67.0429 63.1108 67.4948 62.0313L67.8693 61.1506V39.9858V18.8211L67.4948 17.983C67.017 16.9034 66.1906 15.9943 65.2479 15.5114L64.5119 15.1279L35.0697 15.0995C9.83728 15.0853 5.53717 15.0995 5.03356 15.2841ZM64.9122 17.2586C65.2996 17.5284 65.687 17.9546 65.9323 18.3807L66.3197 19.0767L66.3585 37.8125L66.3843 56.5341H34.876H3.36775V38.0256C3.38066 22.9546 3.40649 19.4318 3.54854 18.9915C3.81971 18.1676 4.33624 17.5284 5.0723 17.1307L5.74378 16.7614L35.0051 16.7898L64.2794 16.8324L64.9122 17.2586ZM66.3843 59.3182C66.3843 59.9148 66.3197 60.6534 66.2293 60.9517C66.0356 61.6762 65.3383 62.571 64.6539 62.9688L64.1245 63.2813H34.876H5.62757L5.09812 62.9688C4.41372 62.571 3.71641 61.6762 3.52271 60.9517C3.43232 60.6534 3.36775 59.9148 3.36775 59.3182V58.2387H34.876H66.3843V59.3182ZM42.8822 66.8324V68.608H34.8115H26.7407V66.8324V65.0568H34.8115H42.8822V66.8324ZM45.2582 71.4063L47.0145 72.5142V73.3239V74.1477H34.876H22.7376V73.3239V72.5142L24.4421 71.4063L26.1467 70.3125H34.8244H43.5021L45.2582 71.4063Z" fill="#009A6D"/>
                   <path d="M31.2861 60.1136C30.9762 60.554 30.9891 60.9233 31.3119 61.2926L31.6348 61.6477H34.876H38.1172L38.44 61.2926C38.6854 61.0227 38.737 60.8523 38.6725 60.6108C38.4917 59.9432 38.5175 59.9432 34.876 59.9432C32.2675 59.9432 31.3894 59.9858 31.2861 60.1136Z" fill="#009A6D"/>
@@ -57,13 +44,13 @@
                   </defs>
                 </svg>
               </span>
-              <span class="main-about__icon-text text-uppercase text-h11">
-                Преданность <br/>науке
+            <span class="main-about__icon-text text-uppercase text-h11">
+                Преданность науке
               </span>
-            </div>
-            <div class="main-about__icon d-flex align-items-center">
+          </div>
+          <div class="main-about__icon d-flex align-items-center">
               <span class="main-about__icon-svg">
-                <svg width="80" height="82" viewBox="0 0 80 82" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg width="50" height="50" viewBox="0 0 80 82" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <g clip-path="url(#clip0_944_963)">
                   <path d="M5.03356 15.2841C3.6131 15.7671 2.2443 17.3722 1.96021 18.9205C1.8569 19.446 1.81816 25.8381 1.84399 40.412L1.88273 61.1506L2.2443 62.0029C2.70918 63.1108 3.58728 64.0767 4.58159 64.5881L5.3693 64.9858L15.2867 65.0284L25.1911 65.071V67.0171L25.1782 68.9631L23.4091 70.0995C22.4406 70.7245 21.5367 71.3495 21.4204 71.4773C21.2267 71.6904 21.188 72.0029 21.188 73.4801C21.188 74.8296 21.2397 75.2983 21.3946 75.5398L21.5883 75.8523H34.876H48.1637L48.3574 75.5398C48.5124 75.2983 48.564 74.8296 48.564 73.5654C48.564 72.6421 48.5253 71.7898 48.4866 71.662C48.4091 71.4489 45.9556 69.787 44.9096 69.233L44.4318 68.9773V67.0171V65.071L54.4137 65.0284L64.3827 64.9858L65.1188 64.6023C66.1518 64.0767 67.0429 63.1108 67.4948 62.0313L67.8693 61.1506V39.9858V18.8211L67.4948 17.983C67.017 16.9034 66.1906 15.9943 65.2479 15.5114L64.5119 15.1279L35.0697 15.0995C9.83728 15.0853 5.53717 15.0995 5.03356 15.2841ZM64.9122 17.2586C65.2996 17.5284 65.687 17.9546 65.9323 18.3807L66.3197 19.0767L66.3585 37.8125L66.3843 56.5341H34.876H3.36775V38.0256C3.38066 22.9546 3.40649 19.4318 3.54854 18.9915C3.81971 18.1676 4.33624 17.5284 5.0723 17.1307L5.74378 16.7614L35.0051 16.7898L64.2794 16.8324L64.9122 17.2586ZM66.3843 59.3182C66.3843 59.9148 66.3197 60.6534 66.2293 60.9517C66.0356 61.6762 65.3383 62.571 64.6539 62.9688L64.1245 63.2813H34.876H5.62757L5.09812 62.9688C4.41372 62.571 3.71641 61.6762 3.52271 60.9517C3.43232 60.6534 3.36775 59.9148 3.36775 59.3182V58.2387H34.876H66.3843V59.3182ZM42.8822 66.8324V68.608H34.8115H26.7407V66.8324V65.0568H34.8115H42.8822V66.8324ZM45.2582 71.4063L47.0145 72.5142V73.3239V74.1477H34.876H22.7376V73.3239V72.5142L24.4421 71.4063L26.1467 70.3125H34.8244H43.5021L45.2582 71.4063Z" fill="#009A6D"/>
                   <path d="M31.2861 60.1136C30.9762 60.554 30.9891 60.9233 31.3119 61.2926L31.6348 61.6477H34.876H38.1172L38.44 61.2926C38.6854 61.0227 38.737 60.8523 38.6725 60.6108C38.4917 59.9432 38.5175 59.9432 34.876 59.9432C32.2675 59.9432 31.3894 59.9858 31.2861 60.1136Z" fill="#009A6D"/>
@@ -78,12 +65,41 @@
                   </defs>
                 </svg>
               </span>
-              <span class="main-about__icon-text text-uppercase text-h11">
-                Технологии, востребованные <br/>сегодня и завтра
+            <span class="main-about__icon-text text-uppercase text-h11">
+                Технологии, востребованные сегодня и завтра
               </span>
-            </div>
           </div>
         </div>
+        <div class="main-about__link-mobile">
+          <a class="main-about__link">
+            история компании
+          </a>
+        </div>
+      </div>
+      <div class="main-about__right d-flex flex-column justify-content-between">
+        <div class="main-about__right-top">
+          <h2 class="main-about__title text-h2 text-uppercase">
+            Научно-техническое предприятие "Криптософт"
+          </h2>
+          <div class="main-about__descr d-flex flex-column">
+            <p class="main-about__text descr1">
+              НТП "Криптософт" является ведущим предприятием в России в области информационной безопасности, специализирующимся на разработке аппаратных и программных средств защиты информации.  С момента своего основания в 1993 году компания демонстрирует стабильный рост всех показателей и активно накапливает научный потенциал
+            </p>
+            <p class="main-about__text descr1">
+              Основные направления деятельности включают проведение научно-исследовательских и опытно-конструкторских работ, изготовление, а также единичные и серийные поставки изделий специального назначения
+            </p>
+            <p class="main-about__text descr1">
+              НТП "Криптософт" активно занимается разработкой систем контроля доступа информации (СКЗИ) новейших поколений и соответствует строгим требованиям лицензирования ФСБ РФ, ФСТЭК РФ и других регулирующих органов
+            </p>
+          </div>
+        </div>
+
+        <div class="main-about__link-wrap">
+          <a class="main-about__link">
+            история компании
+          </a>
+        </div>
+
       </div>
     </div>
   </div>
