--- a/src/partials/main/facts.html
+++ b/src/partials/main/facts.html
@@ -1,48 +1,67 @@
 <section class="facts">
   <div class="custom-container container-fluid">
-    <div class="facts__content d-flex align-items-lg-center justify-content-lg-between flex-column flex-lg-row">
-      <div class="facts__left">
-        <h2 class="text-h2 facts__title text-uppercase">
-          факты о&nbsp;компании
-        </h2>
-        <p class="facts__text text-h6-h9 text-uppercase text-h5">
-          Разработчик единственной отечественной полнофункциональной операционной системы
-        </p>
-      </div>
-      <div class="facts__right d-flex flex-wrap justify-content-between align-items-start">
+    <div class="facts__content">
+      <div class="facts__items">
         <div class="facts__item">
-          <h3 class="text-h6 facts__item-title">
+          <a class="facts__title-link d-flex align-items-center">
+            <h2 class="text-h2 facts__title text-uppercase">
+              факты о&nbsp;компании
+            </h2>
+            <span class="facts__title-link-svg">
+            <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" clip-rule="evenodd" d="M7.20938 5.23017C6.92228 5.52875 6.93159 6.00353 7.23017 6.29063L11.1679 10L7.23017 13.7094C6.93159 13.9965 6.92228 14.4713 7.20938 14.7698C7.49647 15.0684 7.97125 15.0777 8.26983 14.7906L12.7698 10.5406C12.9169 10.3992 13 10.204 13 10C13 9.79599 12.9169 9.60078 12.7698 9.45938L8.26983 5.20938C7.97125 4.92228 7.49647 4.93159 7.20938 5.23017Z" fill="#00B883"/>
+              </svg>
+          </span>
+          </a>
+          <p class="facts__text text-uppercase text-h5">
+            Разработчик единственной отечественной полнофункциональной операционной системы
+          </p>
+        </div>
+        <div class="facts__item">
+          <h3 class="facts__item-title">
             30 лет
           </h3>
-          <p class="descr1 facts__item-text descr-1-2">
+          <p class="descr6 facts__item-text text-uppercase">
             Накопления и применения экспертизы в области информационной безопасности
           </p>
         </div>
         <div class="facts__item">
-          <h3 class="text-h6 facts__item-title">
-            18 лет
-          </h3>
-          <p class="descr1 facts__item-text descr-1-2">
-            Разработки отечественной инфраструктурной экосистемы
-          </p>
+          <span class="facts__svg"></span>
+          <div class="facts__descr">
+            <h3 class="facts__item-title">
+              <span class="text-h6">
+                500
+              </span>
+            </h3>
+            <p class="descr7 facts__item-text descr-1-2">
+              успешно выполненных ниокр
+            </p>
+          </div>
         </div>
         <div class="facts__item">
-          <h3 class="text-h6 facts__item-title">
-            15 лет
-          </h3>
-          <p class="descr1 facts__item-text descr-1-2">
-            Научных разработок в области квантовой криптографии
-          </p>
+          <span class="facts__svg"></span>
+          <div class="facts__descr">
+            <h3 class="facts__item-title">
+               <span class="text-h6">7000 </span>м²
+            </h3>
+            <p class="descr7 facts__item-text descr-1-2">
+              Помещений для разработки, тестирования, отладки производственных линий и собственная испытательная лаборатория, аккредитованная ФСБ России
+            </p>
+          </div>
         </div>
         <div class="facts__item">
-          <h3 class="text-h6 facts__item-title">
-            500
-          </h3>
-          <p class="descr1 facts__item-text descr-1-2">
-            Успешно выполненных НИОКР
-          </p>
+          <span class="facts__svg"></span>
+          <div class="facts__descr">
+            <h3 class="facts__item-title">
+              более<span class="text-h6"> 400 </span>сотрудников
+            </h3>
+            <p class="descr7 facts__item-text descr-1-2">
+              специализирующихся на разработке аппаратных и программных средств защиты информации
+            </p>
+          </div>
         </div>
       </div>
+
     </div>
   </div>
 </section>
