--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -1,5 +1,5 @@
 :root {
-  --font-family: "Neo Sans Cyr","Din Condensed", "Neo Sans Cyr", Helvetica, Arial;
+  --font-family: 'Sofia Sans', 'Sofia Sans Condensed', Helvetica, Arial;
 
   --content-width: 1440px;
   --container-offset: 100px;
@@ -11,9 +11,12 @@
   --green: #009A6D;
   --green-secondary: #00B883;
   --gray: #747E7C;
+  --gray-e1: #E1E1E1;
   --gray-light: #F1F1F1;
   --gray-secondary: #BCC7C4;
   --black-transporent-50: #27272780;
+  --green-gradient: linear-gradient(90deg, #009A6D 0%, #00B883 100%);
+
 
   --gap-50: 50px;
   --gap-40: 40px;
@@ -23,24 +26,29 @@
   --gap-16: 16px;
   --gap-12: 12px;
 
-  --text-din: "Din Condensed";
-  --text-neo: "Neo Sans Cyr";
-  --text-neo-mid: "Neo Sans Cyr Medium";
+  --text-sofia: 'Sofia Sans';
+  --text-sofia-condensed: 'Sofia Sans Condensed';
 
   --text-size-350: 35rem;
   --text-size-120: 12rem;
   --text-size-90: 9rem;
+  --text-size-70: 7rem;
   --text-size-60: 6rem;
+  --text-size-50: 5rem;
+  --text-size-40: 4rem;
+  --text-size-36: 3.6rem;
   --text-size-35: 3.5rem;
   --text-size-30: 3rem;
-  --text-size-40: 4rem;
+  --text-size-28: 2.8rem;
   --text-size-24: 2.4rem;
   --text-size-22: 2.2rem;
   --text-size-20: 2rem;
   --text-size-18: 1.8rem;
   --text-size-16: 1.6rem;
   --text-size-14: 1.4rem;
+  --text-size-13: 1.3rem;
   --text-size-12: 1.2rem;
+  --text-size-10: 1rem;
 
 
   --text-height-145: 145%;
@@ -52,5 +60,10 @@
   --text-height-120: 120%;
   --text-height-110: 110%;
   --text-height-100: 100%;
+
+  --text-regular: 400;
+  --text-light: 300;
+  --text-bold: 700;
+  --text-semibold: 600;
 
 }
