--- a/src/scss/components/main/about.scss
+++ b/src/scss/components/main/about.scss
@@ -1,8 +1,24 @@
 .main-about {
-  padding: 70px 0;
+  padding: 55px 0;
+
+  &__content {
+    gap: var(--gap-30);
+  }
+
+  &__left {
+    max-width: 328px;
+    width: 100%;
+  }
+
+  &__right {
+    &-top {
+      margin-bottom: 10px;
+    }
+  }
 
   &__title {
-    margin-bottom: 20px;
+    margin-bottom: 12px;
+    max-width: 534px;
   }
 
   &__block {
@@ -19,32 +35,63 @@
   }
 
   &__icons {
-    gap: var(--gap-20);
+    gap: 35px;
   }
 
   &__icon {
-    gap: var(--gap-16);
+    width: 100%;
+    background: var(--green-gradient);
+    gap: var(--gap-12);
+    border-radius: 4px;
+    padding: 20px;
 
     &-svg {
-      width: 80px;
-      height: 80px;
+      width: 50px;
+      height: 50px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    &-text {
+      color: var(--white);
     }
   }
-}
 
+  &__link {
+    display: inline-block;
+    color: var(--black);
+    font-size: var(--text-size-12);
+    line-height: var(--text-height-135);
+    text-transform: uppercase;
+    font-weight: var(--text-semibold);
+    font-family: var(--text-sofia-condensed);
+    border-bottom: 1px solid var(--gray-secondary);
 
-
-@media screen and (max-width: 1110px) {
-  .main-about {
-    &__block {
-      gap: var(--gap-50);
+    &-mobile {
+      display: none;
     }
   }
 }
 
 @media screen and (max-width: 992px) {
   .main-about {
+
+    &__left {
+      max-width: none;
+      gap: var(--gap-20);
+    }
+
+    &__title {
+      max-width: none;
+    }
+
+    &__icons {
+      gap: var(--gap-20);
+    }
+
     &__icon {
+      width: calc(100% / 2 - (20px) / 2);
       &-svg {
         width: 40px;
         height: 40px;
@@ -54,12 +101,24 @@
          }
       }
     }
+
+    &__link {
+
+      &-wrap {
+        display: none;
+      }
+      &-mobile {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+    }
   }
 }
 
 @media screen and (max-width: 767px) {
   .main-about {
-    padding: 35px 0;
+    padding: 30px 0;
 
     &__title {
       margin-bottom: var(--gap-12);
@@ -79,6 +138,26 @@
           height: 30px;
         }
       }
+    }
+  }
+}
+
+@media screen and (max-width: 575px) {
+  .main-about {
+    &__title {
+      margin-bottom: 16px;
+    }
+
+    &__descr {
+      margin-bottom: var(--gap-16);
+    }
+
+    &__icons {
+      gap: var(--gap-12);
+    }
+
+    &__icon {
+      width: 100%;
     }
   }
 }
