--- a/src/scss/components/main/facts.scss
+++ b/src/scss/components/main/facts.scss
@@ -5,76 +5,161 @@
     gap: var(--gap-30);
   }
 
-  &__left {
-    max-width: 487px;
-    width: 100%;
-  }
-
   &__title {
-    margin-bottom: 17px;
+    line-height: var(--text-height-130);
+    &-link {
+      gap: 30px;
+      &-svg {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 20px;
+        height: 20px;
+        border-radius: 50%;
+        border: 1px solid var(--green);
+      }
+    }
   }
 
-  &__right {
-    width: 50%;
-    column-gap: var(--gap-30);
-    row-gap: 43px;
+  &__text {
+    opacity: 70%;
+  }
+
+  &__items {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: var(--gap-30);
   }
 
   &__item {
-    width: calc((100% - 30px) / 2);
+    min-height: 180px;
+    border-radius: 4px;
+    background-color: var(--gray-light);
+    padding: 20px;
+    display: flex;
+    gap: 26px;
+    align-items: center;
     &-title {
-      color: var(--green);
-      margin-bottom: var(--gap-12);
+      margin-bottom: 6px;
+      max-width: 190px;
+      width: 100%;
+      text-transform: uppercase;
+      font-size: var(--text-size-20);
+      font-family: var(--text-sofia-condensed);
+      line-height: var(--text-height-100);
+      font-weight: var(--text-weight-bold);
     }
+
+    &-text {
+      opacity: 70%;
+      text-transform: uppercase;
+
+    }
+
+    &:first-child {
+      background-color: transparent;
+      flex-direction: column;
+      justify-content: center;
+      gap: 0;
+      align-items: start;
+    }
+
+    &:nth-child(2) {
+      grid-column: 3 / 4;
+      flex-direction: column;
+      align-items: start;
+      justify-content: end;
+      gap: 0;
+      grid-row: 1 / 3;
+      background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.2) 100%);
+
+      h3 {
+        color: var(--white);
+        margin-bottom: 8px;
+        font-family: var(--text-sofia-condensed);
+        font-weight: 700;
+        font-size: var(--text-size-70);
+        line-height: var(--text-height-110);
+      }
+
+      p{
+        color: var(--white);
+        max-width: 227px;
+        width: 100%;
+      }
+    }
+  }
+
+  &__svg {
+    flex-shrink: 0;
+    width: 71px;
+    height: 64px;
+    background-color: var(--green);
   }
 }
 
-@media screen and (max-width: 1110px) {
-  .facts {
-    &__left {
-      max-width: none;
-      width: calc((100% - 30px) / 2);
-    }
-
-    &__right {
-      width: calc((100% - 30px) / 2);
-    }
-  }
-}
 
 @media screen and (max-width: 991px) {
   .facts {
-
-
-    &__left {
-      width: 100%;
+    &__items {
+      grid-template-columns: 1fr 1fr;
     }
 
-
-    &__right {
-      width: 100%;
+    &__item {
+      &:nth-child(2) {
+        grid-column: 2 / 3;
+      }
     }
   }
 }
 
 @media screen and (max-width: 767px) {
   .facts {
-    padding: 35px 0;
-    &__content {
-      gap: 41px;
-    }
+    padding: 30px 0;
 
-    &__title {
-      margin-bottom: 20px;
-    }
-
-    &__right {
-      column-gap: var(--gap-16);
-      row-gap: var(--gap-16);
+    &__items {
+      grid-template-columns: 1fr;
+      gap: var(--gap-16);
     }
 
     &__item {
-      width: calc((100% - 16px) / 2);
+      min-height: 126px;
+
+      &-text {
+        max-width: none;
+      }
+
+      &:first-child {
+        min-height: 100px;
+        padding: 0;
+        gap: var(--gap-16);
+        justify-content: start;
+      }
+
+      &:nth-child(2) {
+        grid-column: 1 / 2;
+        grid-row: 2 / 4;
+        min-height: 306px;
+        align-items: center;
+
+        h3 {
+          font-size: 6.5rem;
+          margin-bottom: 10px;
+          text-align: center;
+        }
+
+        p {
+          text-align: center;
+          max-width: 217px;
+          font-weight: var(--text-regular);
+        }
+      }
+    }
+
+
+    &__text {
+      max-width: 284px;
+      width: 100%;
     }
   }
 
