--- a/src/scss/mixins/_burger-btn.scss
+++ b/src/scss/mixins/_burger-btn.scss
@@ -1,34 +1,35 @@
 @mixin burgerBtn {
-  width: 24px;
-  height: 17px;
+  width: 38px;
+  height: 38px;
+  padding: 11px 8px;
   display: flex;
+  border: 1px solid var(--green);
   align-items: center;
   justify-content: space-between;
   flex-direction: column;
   z-index: 2;
-  border: none;
-  padding: 0;
   background-color: transparent;
   cursor: pointer;
 
   span {
     width: 100%;
     height: 3px;
-    background-color: var(--black);
+    border-radius: 1px;
+    background-color: var(--green);
     transition: transform .3s ease-in-out;
   }
 }
 
 @mixin activeBurger {
   span:nth-child(1) {
-    transform: translate(0px, 7px) rotate(45deg);
+    transform: translate(0px, 6px) rotate(45deg);
   }
   span:nth-child(2) {
     transform: scale(0);
   }
 
   span:nth-child(3) {
-    transform: translate(0px, -7px) rotate(-45deg);
+    transform: translate(0px, -5px) rotate(-45deg);
   }
 
 }
